Add firefox image.